# Computer_graphics2025

./: README.md
KGlab1/: App.xaml  App.xaml.cs  ColorConverter.cs  KGlab1.csproj  MainWindow.xaml  MainWindow.xaml.cs
KGlab2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
KGlab3/: README.md  index.html
